--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://shresthgour.github.io/",
+	"homepage": "https://shresthgour.github.io/textutils--React",
 	"name": "textutils",
 	"version": "0.1.0",
 	"private": true,
